volexc/tests/ui/check_duplicate_struct.out
Error: duplicate definition of `Foo`
   ╭─[check_duplicate_struct.vol:2:8]
   │
 2 │ struct Foo {
   │        ─┬─  
   │         ╰─── first defined here
   │ 
 6 │ struct Foo {
   │        ─┬─  
   │         ╰─── redefined here
───╯