volexc/tests/ui/check_duplicate_struct.vol
// Duplicate struct definition
struct Foo {
    x: u32;
}

struct Foo {
    y: u64;
}
